final push maybe

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     }
                
                 //variables 
-                score = 0 
+                score = 0; 
                 let q1Response = $("#q1").val().toLowerCase();
                 let q2Response = $("#q2").val();
                 let q4Response = $("input[name=q4]:checked").val();
